--- a/genre.html
+++ b/genre.html
@@ -301,8 +301,8 @@
       }
       let genre = url.substr(index + 1);
       //   alert(genre);
-      document.title = genre[0].toUpperCase() + genre.substr(1) + " | Genre";
-      document.querySelector(".heading").innerText = genre;
+      document.title = genre[0].toUpperCase() + genre.substr(1).split('%').join(' ') + " | Genre";
+      document.querySelector(".heading").innerText = genre[0].toUpperCase() + genre.substr(1).split('%').join(' ');
       document.querySelector(".heading").style.textTransform = "capitalize";
 
       fetch(`https://gogoanime.consumet.org/genre/${genre}`)
@@ -328,7 +328,7 @@
         });
       setTimeout(() => {
         document.querySelector(".footer").style.opacity = "1";
-      }, 2000);
+      }, 4000);
     </script>
   </body>
 </html>
