--- a/genre.html
+++ b/genre.html
@@ -301,8 +301,8 @@
       }
       let genre = url.substr(index + 1);
       //   alert(genre);
-      document.title = genre[0].toUpperCase() + genre.substr(1).split('%').join(' ') + " | Genre";
-      document.querySelector(".heading").innerText = genre[0].toUpperCase() + genre.substr(1).split('%').join(' ');
+      document.title = genre[0].toUpperCase() + genre.substr(1).split('%20').join(' ') + " | Genre";
+      document.querySelector(".heading").innerText = genre[0].toUpperCase() + genre.substr(1).split('%20').join(' ');
       document.querySelector(".heading").style.textTransform = "capitalize";
 
       fetch(`https://gogoanime.consumet.org/genre/${genre}`)
