--- a/keyword.html
+++ b/keyword.html
@@ -302,7 +302,7 @@
       }
       let genre = url.substr(index + 1);
       //   alert(genre);
-      document.title = genre[0].toUpperCase() + genre.substr(1).split('%20').join(' ') + " | Genre";
+      document.title = genre[0].toUpperCase() + genre.substr(1).split('%20').join(' ') + " | Keyword";
       document.querySelector(".heading").innerText = genre[0].toUpperCase() + genre.substr(1).split('%20').join(' ');
       document.querySelector(".heading").style.textTransform = "capitalize";
 
