--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <link rel="stylesheet" href="./styles/manual_customization.css" />
     <link rel="stylesheet" href="./styles/navbar_manual.css" />
     <link rel="stylesheet" href="./styles/media.css" />
-    <title>FTV | Your favourite destination for anime.</title>
+    <title>Anidimen | Your favourite destination for anime.</title>
   </head>
   <body>
     <!-- Navbar -->
