--- a/public/particular.html
+++ b/public/particular.html
@@ -325,10 +325,10 @@
         </div>
       </div>
     </div>
+    <h1 class="heading text-light" style="margin-top : 80px">Episodes </h1>
     <div
       class="episodes_container"
       style="
-        margin-top: 80px;
         width: 90vw;
         display: flex;
         flex-wrap: wrap;
