--- a/public/particular.html
+++ b/public/particular.html
@@ -325,7 +325,13 @@
         </div>
       </div>
     </div>
-    <h1 class="heading text-light" style="margin-top : 80px">Episodes </h1>
+    <h1 class="heading text-light" style="
+            width: 90vw;
+            margin-top: 80px;
+            margin-left: auto;
+            margin-right: auto;
+            font-size: 20px;
+          ">Episodes </h1>
     <div
       class="episodes_container"
       style="
